Sat Aug 10 12:49:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb
	  (REXML::Parsers::BaseParser::CDATA_END): Use "\A" instead of "^".
	  It is not an used constant but I fix it. (Or shuold I remove it?)

Sat Aug 10 12:47:19 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser):
	  Fix wrong constant name. "]>" pattern match is the same but
	  it is used for "<!DOCTYPE" end mark not "<![CDATA[" end mark.

Sat Aug 10 12:43:15 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser):
	  Use "\A" instead of "^" in document type declaration patterns
	  because they are used as the head match in content not the head
	  match in line. They don't cause any problems in the current code
	  but it should be fixed.

Sat Aug 10 12:39:00 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_document_type_declaration.rb: Add tests for
	  parsing document type declaration.

Sat Aug 10 12:00:45 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::SYSTEM):
	  Fix loose "head" match regular expression. It doesn't cause any
	  problem in the current code but it should be fixed because readers
	  may confuse it.
	  Patch by Ippei Obayashi. Thanks!!!

Sat Aug 10 11:58:24 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_notation_declaration.rb (#test_system_public):
	  Add a test for PUBLIC notation and SYSTEM notation order case.

Sat Aug 10 11:31:35 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::PUBLIC):
	  Fix loose "head" match regular expression.
	  [Bug #8701] [ruby-dev:47551]
	  Patch by Ippei Obayashi. Thanks!!!
	* test/rexml/parse/test_notation_declaration.rb (#test_system_public):
	  Add a test for the above case.

Sat Aug 10 09:20:21 2013  Zachary Scott  <e@zzak.io>

	* NEWS: [DOC] typo in example reported by @moretea